Opened 11 years ago
Closed 11 years ago
#10618 closed bug (fixed)
ShowImage crashes loading animated GIF
Reported by: | jscipione | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Add-Ons/Translators/GIF | Version: | R1/alpha4.1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | x86 |
Description
Happened on R1A4.1 as well as a recent nightly.
Backtrace from R1A4.1:
[tcsetpgrp failed in terminal_inferior: Invalid Argument] [Switching to team /boot/system/apps/ShowImage (553) thread image loader (562)] 0x0215dbc8 in GIFLoad::MemblockAllocate () from /boot/system/add-ons/Translators/GIFTranslator (gdb) bt #0 0x0215dbc8 in GIFLoad::MemblockAllocate () from /boot/system/add-ons/Translators/GIFTranslator #1 0x0215d6b6 in GIFLoad::ReadGIFImageData () from /boot/system/add-ons/Translators/GIFTranslator #2 0x0215c567 in GIFLoad::GIFLoad () from /boot/system/add-ons/Translators/GIFTranslator #3 0x02158858 in Translate () from /boot/system/add-ons/Translators/GIFTranslator #4 0x00744700 in BPrivate::BFuncTranslator::Translate () from /boot/system/lib/libtranslation.so #5 0x0074b9eb in BTranslatorRoster::Translate () from /boot/system/lib/libtranslation.so #6 0x0021dc57 in ImageCache::_RetrieveImage () #7 0x0021d6e8 in ImageCache::_QueueWorkerThread () #8 0x007b96e3 in thread_entry () from /boot/system/lib/libroot.so #9 0x780b5fec in ?? ()
I've attached the (animated) gif that causes the crash, it works fine in Web+ for whatever reason.
Attachments (2)
Change History (4)
by , 11 years ago
Attachment: | GLCubes.gif added |
---|
comment:1 by , 11 years ago
Web+ doesn't use our translators to decode images. This is because it needs to decode them before they're done loading, to provide a "preview" display.
Note:
See TracTickets
for help on using tickets.
Animated gif image of GLCubes screen saver