GIFTranslator: Increase ENTRY_COUNT to 4354

Fixes #10618

Why 4354?

4354 = 4096 + 256 + 1 + 1
4096 for the image data, 256 for the color codes,
1 for the clear code, 1 for the end code